--- a/index.html.html
+++ b/index.html.html
@@ -22,6 +22,8 @@
                     <li><a href="#skills">SKILLS</a></li>
                     <li><a href="#contact">CONTACT</a></li>
                 </ul>
+            <input type="checkbox" id="theme-toggle" class="theme-checkbox" hidden>
+            <label for="theme-toggle" class="theme-toggle" aria-label="Toggle color theme"></label>
         </nav>
     </header> 
 <!--header starts-->
@@ -35,7 +37,7 @@
                    <li><i class="fa-solid fa-laptop-code"></i> </li> 
                    <li><i class="fa-solid fa-database"></i></li>
                  </ul>
-             </div>
+            </div>
             <div class="images">
                 <video class="hero-video" src="media/self.mp4" autoplay muted loop playsinline></video>
             </div>
@@ -55,7 +57,7 @@
 </section>
 
 
-<!--service starts-->
+<!--skills starts-->
 <div class="skills" id="skills">
     <div class="title">
         <h2>My Skills</h2>
@@ -95,7 +97,5 @@
         <li><a href="https://www.instagram.com/ari_ughna?igsh=cHl0NTVyN21nZm84" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a></li>
         <li><a href="https://www.facebook.com/share/1BAB3WpR1M/" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><i class="fa-brands fa-facebook"></i></a></li>
     </ul>
-        
-        
 </div>
 
